// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils helper functions renders displayVisualization function 1`] = `
<div>
  <div>
    <div
      id="explorerPlotComponent"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`Utils helper functions renders displayVisualization function 2`] = `
<div>
  <div>
    <div
      id="explorerPlotComponent"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`Utils helper functions renders displayVisualization function 3`] = `
<div>
  <div>
    <div
      id="explorerPlotComponent"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`Utils helper functions renders displayVisualization function 4`] = `
<div>
  <div />
</div>
`;
